// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Header Normal 1`] = `
<header
  className="h-16 bg-gray-200"
>
  <div
    className="flex w-240 my-0 mx-auto h-full items-center"
  >
    <div
      className="mr-20 px-3 py-1"
    >
      LOGO
    </div>
    <nav
      className="w-3/4"
    >
      <ul
        className="flex list-none"
      >
        <li>
          <a
            className="px-3 py-1 text-gray-600"
            href="/films/"
            onClick={[Function]}
          >
            Films
          </a>
        </li>
        <li>
          <a
            className="px-3 py-1 text-gray-600"
            href="/tv-shows/"
            onClick={[Function]}
          >
            TV-shows
          </a>
        </li>
        <li>
          <a
            className="px-3 py-1 text-gray-600"
            href="/lists/"
            onClick={[Function]}
          >
            Lists
          </a>
        </li>
        <li>
          <a
            className="px-3 py-1 text-gray-600"
            href="/discussions/"
            onClick={[Function]}
          >
            Discussions
          </a>
        </li>
        <li>
          <a
            className="px-3 py-1 text-gray-600"
            href="/signup/"
            onClick={[Function]}
          >
            Sign Up
          </a>
        </li>
        <li>
          <a
            className="px-3 py-1 text-gray-600"
            href="/login/"
            onClick={[Function]}
          >
            Log In
          </a>
        </li>
      </ul>
    </nav>
  </div>
</header>
`;

exports[`Storyshots Hero Normal 1`] = `
<div
  className="flex justify-center content-center h-168 bg-center bg-no-repeat"
  style={
    Object {
      "backgroundImage": "linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('/watchingtv.jpg')",
    }
  }
>
  <div
    className="flex w-240 my-0 mx-auto flex-col justify-center text-center"
  >
    <h1
      className="text-4xl font-bold leading-tight text-gray-300"
    >
      Save shows and movies you want to watch.
      <br />
      Track what you have watched.
      <br />
      Share with your friends what is worth watching.
    </h1>
    <a
      className="flex justify-around w-48 mx-auto mt-10 py-1 border-b border-transparent hover:border-white"
      href="/signup"
      onClick={[Function]}
    >
      <p
        className="uppercase tracking-wide text-xl text-white"
      >
        Get started
      </p>
      <svg
        className="bg-white rounded-full p-1 self-center"
      >
        arrow.svg
      </svg>
    </a>
  </div>
</div>
`;

exports[`Storyshots NavItem Normal 1`] = `
<li>
  <a
    className="px-3 py-1 text-gray-600"
    href="/default/"
    onClick={[Function]}
  >
    Default
  </a>
</li>
`;

exports[`Storyshots TopNav Logged In 1`] = `
<nav
  className="w-3/4"
>
  <ul
    className="flex list-none"
  >
    <li>
      <a
        className="px-3 py-1 text-gray-600"
        href="/films/"
        onClick={[Function]}
      >
        Films
      </a>
    </li>
    <li>
      <a
        className="px-3 py-1 text-gray-600"
        href="/tv-shows/"
        onClick={[Function]}
      >
        TV-shows
      </a>
    </li>
    <li>
      <a
        className="px-3 py-1 text-gray-600"
        href="/lists/"
        onClick={[Function]}
      >
        Lists
      </a>
    </li>
    <li>
      <a
        className="px-3 py-1 text-gray-600"
        href="/discussions/"
        onClick={[Function]}
      >
        Discussions
      </a>
    </li>
    <li>
      <a
        className="px-3 py-1 text-gray-600"
        href="/myprofile/"
        onClick={[Function]}
      >
        My Profile
      </a>
    </li>
    <li>
      <a
        className="px-3 py-1 text-gray-600"
        href="/"
        onClick={[Function]}
      >
        Log Out
      </a>
    </li>
  </ul>
</nav>
`;

exports[`Storyshots TopNav Logged Out 1`] = `
<nav
  className="w-3/4"
>
  <ul
    className="flex list-none"
  >
    <li>
      <a
        className="px-3 py-1 text-gray-600"
        href="/films/"
        onClick={[Function]}
      >
        Films
      </a>
    </li>
    <li>
      <a
        className="px-3 py-1 text-gray-600"
        href="/tv-shows/"
        onClick={[Function]}
      >
        TV-shows
      </a>
    </li>
    <li>
      <a
        className="px-3 py-1 text-gray-600"
        href="/lists/"
        onClick={[Function]}
      >
        Lists
      </a>
    </li>
    <li>
      <a
        className="px-3 py-1 text-gray-600"
        href="/discussions/"
        onClick={[Function]}
      >
        Discussions
      </a>
    </li>
    <li>
      <a
        className="px-3 py-1 text-gray-600"
        href="/signup/"
        onClick={[Function]}
      >
        Sign Up
      </a>
    </li>
    <li>
      <a
        className="px-3 py-1 text-gray-600"
        href="/login/"
        onClick={[Function]}
      >
        Log In
      </a>
    </li>
  </ul>
</nav>
`;
